--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,9 +12,9 @@ jobs:
       - run:
           name: Running E2E tests with JUnit reporter
           command: |
-              sudo curl -L "https://github.com/docker/compose/releases/download/1.22.0/docker-compose-$(uname -s)-$(uname -m)"  -o /usr/local/bin/docker-compose
-              sudo mv /usr/local/bin/docker-compose /usr/bin/docker-compose
-              sudo chmod +x /usr/bin/docker-compose
+              curl -L "https://github.com/docker/compose/releases/download/1.22.0/docker-compose-$(uname -s)-$(uname -m)"  -o /usr/local/bin/docker-compose
+              mv /usr/local/bin/docker-compose /usr/bin/docker-compose
+              chmod +x /usr/bin/docker-compose
               docker-compose run -v /root/config.json:/root/config.json colliectl:latest
               echo $value
 workflows:
