--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,12 +12,11 @@ jobs:
       - run:
           name: Running E2E tests with JUnit reporter
           command: |
-              pip install aws-cli
+              pip install awscli
               $(aws ecr get-login --no-include-email --region ap-south-1)
               curl -L "https://github.com/docker/compose/releases/download/1.22.0/docker-compose-$(uname -s)-$(uname -m)"  -o /usr/local/bin/docker-compose
               mv /usr/local/bin/docker-compose /usr/bin/docker-compose
-              chmod +x /usr/bin/docker-compose
-              docker-compose up -d
+              chmod +x /usr/bin/docker-compose              
               docker run --rm -it -v /root/.docker/config.json:/root/.docker/config.json  -v /var/run/docker.sock:/var/run/docker.sock  --env-file env.txt -v ~/collie_logs:/tmp/collie_logs 271300522025.dkr.ecr.ap-south-1.amazonaws.com/colliectl:latest -i logging -s team-tiger1 -r smoke
 workflows:
   version: 2
