--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ jobs:
   test:
     docker:
       # the Docker image with Cypress dependencies
-      - image: python:2.7.14
+      - image: circleci/python:2.7.14
     working_directory: ~/app
     parallelism: 1
     steps:
