--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ jobs:
   test:
     docker:
       # the Docker image with Cypress dependencies
-      - image: circleci/alpine:3.7
+      - image: alpine:3.7
     working_directory: ~/app
     parallelism: 1
     steps:
