--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,3 +6,4 @@ services:
     volumes:
       - home/circleci/.docker/config.json:/root/.docker/config.json
       - /var/run/docker.sock:/var/run/docker.sock
+      - ./collie_logs:/tmp/collie_logs
