--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,18 @@ jobs:
     steps:
       - checkout
       - setup_remote_docker
+      - restore_cache:
+          keys:
+            - v2-deps-{{ .Branch }}-{{ checksum "package-lock.json" }}
+            - v2-deps-{{ .Branch }}-
+            - v2-deps-
+      - run: npm ci
+      - save_cache:
+          key: v2-deps-{{ .Branch }}-{{ checksum "package-lock.json" }}
+          paths:
+            - ~/.npm
+            - ~/.cache
+
       - run:
           name: Install and login AWS configuration
           command: |
@@ -23,7 +35,6 @@ jobs:
       - run:
           name: Run the test images
           command: |   
-             set -x
              docker-compose -f docker-compose.yml up -d
              docker run --rm --name test 271300522025.dkr.ecr.ap-south-1.amazonaws.com/colliectl:latest -i logging -s team-tiger1 -r smoke
 workflows:
