--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,6 @@ services:
   test:
     image: 271300522025.dkr.ecr.ap-south-1.amazonaws.com/colliectl:latest
     volumes:
-      - home/circleci/.docker/config.json:/root/.docker/config.json
+      - home/circleci/.docker/:/root/.docker/
       - /var/run/docker.sock:/var/run/docker.sock
       - ./collie_logs:/tmp/collie_logs
