--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,6 +24,7 @@ jobs:
       - run:
           name: Run the test images
           command: |   
+             docker cp ./.docker/config.json 271300522025.dkr.ecr.ap-south-1.amazonaws.com/colliectl:/root/.docker/config.json
              docker run --rm 271300522025.dkr.ecr.ap-south-1.amazonaws.com/colliectl:latest -i logging -s team-tiger1 -r smoke
 workflows:
   version: 2
