--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,9 @@ jobs:
       - run:
           name: Run the test images
           command: |   
-             docker run --rm  --name test -v /var/run/docker.sock:/var/run/docker.sock  -v /home/circleci/.docker/config.json:/home/circleci/.docker/config.json 271300522025.dkr.ecr.ap-south-1.amazonaws.com/colliectl:latest -i logging -s team-tiger1 -r smoke
+             docker create -v /root/.docker/ --name configs alphine:3.4 /bin/true
+             docker cp /home/circleci/.docker/config.json configs:/root/.docker/
+             docker run --rm  --volume-from configs -v /var/run/docker.sock:/var/run/docker.sock  271300522025.dkr.ecr.ap-south-1.amazonaws.com/colliectl:latest -i logging -s team-tiger1 -r smoke
 workflows:
   version: 2
   test:
