--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,8 +29,8 @@ jobs:
               docker run --name app --entrypoint /bin/bash 271300522025.dkr.ecr.ap-south-1.amazonaws.com/colliectl:latest
               docker cp app:/tmp/collie_logs ./
       - store_artifacts:
-          path: /tmp/collie_logs
-          destination: ./             
+          path: ./
+               
 workflows:
   version: 2
   test:
