--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,10 +22,10 @@ jobs:
       - run:
           name: Run the test images
           command: |  
-             mkdir $PWD/collie_logs
-             docker run --volumes-from configs -v /var/run/docker.sock:/var/run/docker.sock  -v $PWD/collie_logs:/tmp/collie_logs  --env-file env.txt 271300522025.dkr.ecr.ap-south-1.amazonaws.com/colliectl:latest -i logging -s team-tiger1 -r smoke
+             mkdir /home/circleci/collie_logs
+             docker run --volumes-from configs -v /var/run/docker.sock:/var/run/docker.sock  -v /home/circleci/collie_logs:/tmp/collie_logs  --env-file env.txt 271300522025.dkr.ecr.ap-south-1.amazonaws.com/colliectl:latest -i logging -s team-tiger1 -r smoke
       - store_artifacts:
-          path: $PWD/collie-logs
+          path:/home/circleci/collie-logs
                
 workflows:
   version: 2
