--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,7 @@ jobs:
              docker cp /home/circleci/.docker/config.json configs:/root/.docker/               
              docker run --volumes-from configs -v /var/run/docker.sock:/var/run/docker.sock  -v  ~/collie_logs/:/tmp/collie_logs  --env-file env.txt 271300522025.dkr.ecr.ap-south-1.amazonaws.com/colliectl:latest -i logging -s team-tiger1 -r smoke
              
-      - store_test_results:
+      - store_artifacts:
           path: ~/collie_logs/
                
 workflows:
