--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,13 +18,18 @@ jobs:
       - run:
           name: Create a volume  and Run the test images
           command: |  
-             mkdir -p ~/collie_logs/
+             mkdir -p /tmp/collie_logs/
              docker create -v /root/.docker/ --name configs ubuntu
              docker cp /home/circleci/.docker/config.json configs:/root/.docker/               
-             docker run --volumes-from configs -v /var/run/docker.sock:/var/run/docker.sock  -v  ~/collie_logs/:/tmp/collie_logs  --env-file env.txt 271300522025.dkr.ecr.ap-south-1.amazonaws.com/colliectl:latest -i logging -s team-tiger1 -r smoke
+             docker run --volumes-from configs -v /var/run/docker.sock:/var/run/docker.sock  -v  /tmp/collie_logs/:/tmp/collie_logs  --env-file env.txt 271300522025.dkr.ecr.ap-south-1.amazonaws.com/colliectl:latest -i logging -s team-tiger1 -r smoke
              
       - store_artifacts:
-          path: ~/collie_logs/
+          path: /tmp/collie_logs/
+          destination: ./
+      -store_test_results:
+          path: /tmp/collie_logs/
+          destination: ./
+      
                
 workflows:
   version: 2
