--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,14 +20,14 @@ jobs:
           command: |  
              mkdir -p /tmp/collie_logs/
              docker create -v /root/.docker/ --name configs ubuntu
-             docker cp /home/circleci/.docker/config.json configs:/root/.docker/               
-             docker run --volumes-from configs -v /var/run/docker.sock:/var/run/docker.sock  -v  /tmp/collie_logs/:/tmp/collie_logs  --env-file env.txt 271300522025.dkr.ecr.ap-south-1.amazonaws.com/colliectl:latest -i logging -s team-tiger1 -r smoke
+             docker cp /home/circleci/.docker/config.json configs:/root/.docker/
              docker run --name app --volumes-from configs -v /var/run/docker.sock:/var/run/docker.sock  -v  /tmp/collie_logs/:/tmp/collie_logs  --env-file env.txt 271300522025.dkr.ecr.ap-south-1.amazonaws.com/colliectl:latest -i logging -s team-tiger1 -r smoke
              docker cp app:/tmp/collie_logs /tmp/collie_logs
              
       - store_artifacts:
           path: /tmp/collie_logs/
-          destination: ./
+          destination: /home/circleci/
+          
       - store_test_results:
           path: /tmp/collie_logs/
           destination: ./
