--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,13 +18,12 @@ jobs:
       - run:
           name: Create a volume  and Run the test images
           command: |  
-             mkdir -p /home/circleci/collie_logs/
              docker create -v /root/.docker/ --name configs ubuntu
              docker cp /home/circleci/.docker/config.json configs:/root/.docker/
              docker run --name app --volumes-from configs -v /var/run/docker.sock:/var/run/docker.sock  -v  /tmp/collie_logs/:/tmp/collie_logs  --env-file env.txt 271300522025.dkr.ecr.ap-south-1.amazonaws.com/colliectl:latest -i logging -s team-tiger1 -r smoke
-             #docker run --name attester --volumes-from configs -v /var/run/docker.sock:/var/run/docker.sock  -v  /tmp/collie_logs/:/tmp/collie_logs  --env-file env.txt 271300522025.dkr.ecr.ap-south-1.amazonaws.com/colliectl:latest -i attester -s team-tiger1 -r smoke -t sample             
-             docker cp app:/tmp/collie_logs /home/circleci/collie_logs/
-             #docker cp attester:/tmp/collie_logs /home/circleci/collie_logs/             
+             docker run --name attester --volumes-from configs -v /var/run/docker.sock:/var/run/docker.sock  -v  /tmp/collie_logs/:/tmp/collie_logs  --env-file env.txt 271300522025.dkr.ecr.ap-south-1.amazonaws.com/colliectl:latest -i attester -s team-tiger1 -r smoke -t sample             
+             docker cp app:/tmp/collie_logs /home/circleci/
+             docker cp attester:/tmp/collie_logs /home/circleci/            
              
       - store_artifacts:
           path: /home/circleci/collie_logs/
