--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,15 +13,20 @@ jobs:
           name: Install and login AWS configuration
           command: |
              sudo pip install awscli
-             eval $(aws ecr get-login --no-include-email --region ap-south-1) 
-        
+             eval $(aws ecr get-login --no-include-email --region ap-south-1)
+             
+      - run:
+          name: Install and login AWS configuration
+          command: |
+             python env_var.py             
+             
       - run:
           name: Create a volume  and Run the test images
           command: |  
              docker create -v /root/.docker/ --name configs ubuntu
              docker cp /home/circleci/.docker/config.json configs:/root/.docker/
-             docker run --name app --volumes-from configs -v /var/run/docker.sock:/var/run/docker.sock   --env-file env.txt 271300522025.dkr.ecr.ap-south-1.amazonaws.com/colliectl:latest -i logging -s team-tiger1 -r smoke
-             docker run --name attester --volumes-from configs -v /var/run/docker.sock:/var/run/docker.sock --env-file env.txt 271300522025.dkr.ecr.ap-south-1.amazonaws.com/colliectl:latest -i attester -s team-tiger1 -r smoke -t sample             
+             docker run --name app --volumes-from configs -v /var/run/docker.sock:/var/run/docker.sock   --env-file env_var.txt 271300522025.dkr.ecr.ap-south-1.amazonaws.com/colliectl:latest -i logging -s team-tiger1 -r smoke
+             docker run --name attester --volumes-from configs -v /var/run/docker.sock:/var/run/docker.sock --env-file env_var.txt 271300522025.dkr.ecr.ap-south-1.amazonaws.com/colliectl:latest -i attester -s team-tiger1 -r smoke -t sample             
              docker cp app:/tmp/collie_logs /home/circleci/
              docker cp attester:/tmp/collie_logs /home/circleci/            
              
