--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
              python env_var.py             
 
       - run:
-          name: Create a coollie.conf file for docker container from circleci contexts
+          name: Create a collie.conf file for docker container from circleci contexts
           command: |
             cat <<EOF >collie.conf
             [collie]
